2008-05-18  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (gconf_property_editor_init),
	(gconf_property_editor_class_init),
	(gconf_property_editor_finalize), (gconf_peditor_new),
	(gconf_peditor_new_boolean), (gconf_peditor_new_integer_valist),
	(gconf_peditor_new_string_valist), (gconf_peditor_new_color),
	(gconf_peditor_new_combo_box),
	(gconf_peditor_new_combo_box_with_enum),
	(gconf_peditor_new_select_radio),
	(gconf_peditor_new_numeric_range),
	(gconf_peditor_widget_set_guard), (gconf_peditor_new_enum_toggle),
	(peditor_image_set_filename), (peditor_image_clicked_cb),
	(gconf_peditor_new_image),
	(gconf_peditor_new_select_radio_with_enum): use G_DEFINE_TYPE to
	get rid of the boilerplate code and remove a number of unnecessary
	casts

==================== 2.23.2 ====================

2008-05-17  Jens Granseuer  <jensgr@gmx.net>

	* bonobo-property-editor-range.c:
	* bonobo-property-editor-range.h: remove unused files

2008-05-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gtk_theme_info_missing_engine),
	(gnome_theme_meta_info_validate):
	* gnome-theme-info.h: split out the check for the missing theme
	engine because we also need it for the packagekit support

2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_meta_info_validate): fix error
	code when GTK engine is missing, and fix the function signature

2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-theme-info.c: (gnome_theme_info_error_quark),
	(gnome_theme_meta_info_free), (gnome_theme_meta_info_validate):
	* gnome-theme-info.h: move metatheme validation code here from the
	appearance capplet and add proper error codes

2008-05-04  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-test.c: (main): doesn't need gnome-vfs any longer

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme), (read_cursor_fonts),
	(update_theme_index): always use URIs instead for info->path; since