@@ -1,3 +1,9 @@
+2008-05-18  Thomas Wood  <thos@gnome.org>
+
+	* gconf-property-editor.c: (gconf_property_editor_class_init),
+	(gconf_property_editor_get_prop): Allow the data property to be
+	read as well as written.
+
 2008-05-18  Jens Granseuer  <jensgr@gmx.net>
 
 	* gconf-property-editor.c: (gconf_property_editor_init),
